Ajustes de props do footer.

--- a/src/resources/footer.properties
+++ b/src/resources/footer.properties
@@ -1,1 +1,13 @@
 # -- footer --
+
+footer.title.header.left = Título da esquerda
+footer.description.left = Descrição do conteúdo do footer da esquerda
+footer.description.link.left = Link left
+
+footer.title.header.central = Título da central
+footer.description.central = Descrição do conteúdo do footer central
+footer.description.link.central = Link central
+
+footer.title.header.right = Título da direita
+footer.description.right = Descrição do conteúdo do footer da direita
+footer.description.link.right = Link right
