Ajustes no props da aplicação.

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,7 +1,6 @@
-# -- welcome --
-welcomeTitle=JSF Blank Application
+# -- application --
 
-welcomeHeading=Welcome!
+tituloSite=Site
+tituloSite_Login=Site: Login
 
-welcomeMessage=This is a JSF blank application. \
-	You can find the application.properties file with this message in the src/resources folder.
+looged_as = Logado como
