--- a/src/resources/footer.properties
+++ b/src/resources/footer.properties
@@ -4,7 +4,7 @@ footer.title.header.left = Título da esquerda
 footer.description.left = Descrição do conteúdo do footer da esquerda
 footer.description.link.left = Link left
 
-footer.title.header.central = Título da central
+footer.title.header.central = Título central
 footer.description.central = Descrição do conteúdo do footer central
 footer.description.link.central = Link central
 
